# advent-2024

./: README.md  advent2025.cabal  cabal.project
.github/workflows/: haskell.yaml
1/: main.hs
10/: main.hs
11/: main.hs
12/: main.hs
13/: main.hs
14/: main.hs
15/: main.hs
16/: main.hs
17/: Instruction.hs  Interpreter.hs  Machine.hs  Parser.hs  main.hs
18/: main.hs
19/: main.hs
2/: main.hs
20/: main.hs
21/: main.hs
22/: main.hs
23/: main.hs
24/: main.hs
25/: main.hs
3/: main.hs
4/: main.hs
5/: main.hs
6/: main.hs  reloaded.hs
7/: main.hs
8/: main.hs
9/: main.hs
common/: AxisAligned.hs  Cursor.hs  Maze.hs  Parsing.hs  Search.hs
