cabal-version:   3.8
name:            advent2025
version:         0.1.0.0
license:         NONE
author:          12800443+twiggler@users.noreply.github.com
maintainer:      Roel de Jong
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall
    build-depends: base ^>=4.18.2.1
    default-extensions: ImportQualifiedPost, DeriveFunctor, FlexibleInstances, TupleSections

library
    import:           warnings
    exposed-modules:  Parsing, 
                      Cursor
    build-depends:    infinite-list ^>=0.1.2
    hs-source-dirs:   common
    default-language: Haskell2010

executable 1
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7
    hs-source-dirs:   1
    default-language: Haskell2010

executable 2
    import:           warnings
    main-is:          main.hs
    hs-source-dirs:   2
    default-language: Haskell2010

executable 3
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025
    hs-source-dirs:   3
    default-language: Haskell2010

executable 4
    import:           warnings
    main-is:          main.hs
    hs-source-dirs:   4
    default-language: Haskell2010

executable 5
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7,  
                      fgl ^>=5.8.3.0,
                      advent2025  
    hs-source-dirs:   5
    default-language: Haskell2010

executable 6
    import:           warnings
    main-is:          main.hs
    build-depends:    infinite-list ^>=0.1.2,
                      containers ^>=0.7,
                      monad-extras ^>=0.6.0,
                      mtl ^>=2.3.1,
                      transformers ^>=0.6.1.0,
                      advent2025
    hs-source-dirs:   6
    default-language: Haskell2010
