cabal-version:   3.8
name:            advent2025
version:         0.1.0.0
license:         NONE
author:          12800443+twiggler@users.noreply.github.com
maintainer:      Roel de Jong
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall
    build-depends: base ^>=4.18.2.1
    default-extensions: ImportQualifiedPost, DeriveFunctor, FlexibleInstances, TupleSections

library
    import:           warnings
    exposed-modules:  Parsing, 
                      Cursor,
                      AxisAligned
    build-depends:    infinite-list ^>=0.1.2,
                      comonad ^>=5.0.9,
                      distributive ^>=0.6.2.1,
                      containers ^>=0.7,
    hs-source-dirs:   common
    default-language: Haskell2010

executable 1
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7
    hs-source-dirs:   1
    default-language: Haskell2010

executable 2
    import:           warnings
    main-is:          main.hs
    hs-source-dirs:   2
    default-language: Haskell2010

executable 3
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025
    hs-source-dirs:   3
    default-language: Haskell2010

executable 4
    import:           warnings
    main-is:          main.hs
    hs-source-dirs:   4
    default-language: Haskell2010

executable 5
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7,  
                      fgl ^>=5.8.3.0,
                      advent2025  
    hs-source-dirs:   5
    default-language: Haskell2010

executable 6
    import:           warnings
    main-is:          main.hs
    build-depends:    infinite-list ^>=0.1.2,
                      containers ^>=0.7,
                      monad-extras ^>=0.6.0,
                      mtl ^>=2.3.1,
                      transformers ^>=0.6.1.0,
                      comonad ^>=5.0.9,
                      advent2025
    hs-source-dirs:   6
    default-language: Haskell2010

executable 6-reloaded
    import:           warnings
    main-is:          reloaded.hs
    build-depends:    containers ^>=0.7,
                      advent2025,
    hs-source-dirs:   6
    default-language: Haskell2010

executable 7
    import:           warnings
    main-is:          main.hs
    build-depends:    integer-logarithms ^>=1.0.4,
                      advent2025
    hs-source-dirs:   7
    default-language: Haskell2010

executable 8
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7,
                      linear ^>=1.23.1,
                      advent2025
    hs-source-dirs:   8
    default-language: Haskell2010

executable 9
    import:           warnings
    main-is:          main.hs
    build-depends:    containers ^>=0.7,
                      mtl ^>=2.3.1,
                      advent2025
    hs-source-dirs:   9
    default-language: Haskell2010

executable 10
    import:           warnings
    main-is:          main.hs
    build-depends:    comonad ^>=5.0.9,
                      containers ^>=0.7,
                      advent2025
    hs-source-dirs:   10
    default-language: Haskell2010

executable 11
    import:           warnings
    main-is:          main.hs
    build-depends:    integer-logarithms ^>=1.0.4,
                      advent2025,
                      vector-sized ^>=1.6.1,
                      finite-typelits ^>=0.2.1.0,
    hs-source-dirs:   11
    default-language: Haskell2010

executable 12
    import:           warnings
    main-is:          main.hs
    build-depends:    fgl ^>=5.8.3.0,
                      comonad ^>=5.0.9,
                      advent2025
    hs-source-dirs:   12
    default-language: Haskell2010

executable 13
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025
    hs-source-dirs:   13
    default-language: Haskell2010

executable 14
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025,
                      linear ^>=1.23.1,
                      ansi-terminal ^>=1.1.2,
    hs-source-dirs:   14
    default-language: Haskell2010

executable 15
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025,
                      containers ^>=0.7,
                      array ^>=0.5.6.0
    hs-source-dirs:   15
    default-language: Haskell2010

executable 16
    import:           warnings
    main-is:          main.hs
    build-depends:    psqueues ^>=0.2.8.1,
                      array ^>=0.5.6.0,
                      containers ^>=0.7,
                      safe ^>=0.3.21,
                      advent2025
    hs-source-dirs:   16
    default-language: Haskell2010

executable 17
    import:           warnings
    main-is:          main.hs
    other-modules:    Machine,
                      Interpreter,
                      Parser,
                      Instruction
    build-depends:    advent2025,
                      finite-typelits ^>=0.2.1.0,
                      vector ^>=0.12.0.1,
                      comonad ^>=5.0.9, 
                      mtl ^>=2.3.1,
                      transformers ^>=0.6.1.0,
                      safe ^>=0.3.21
    hs-source-dirs:   17
    default-language: Haskell2010

executable 18
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025,
                      array ^>=0.5.6.0,
                      search-algorithms ^>=0.3.3,
                      containers ^>=0.7,
                      disjoint-containers ^>=0.3.0.1
    hs-source-dirs:   18
    default-language: Haskell2010

executable 19
    import:           warnings
    main-is:          main.hs
    build-depends:    advent2025,
                      psqueues ^>=0.2.8.1,
                      search-algorithms ^>=0.3.3,
                      bytestring ^>=0.11.5.3,
                      bytestring-trie ^>=0.2.7.6,
                      containers ^>=0.7
    hs-source-dirs:   19
    default-language: Haskell2010
